--- a/Rebound/Packages/manifest.json
+++ b/Rebound/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.coffee.softmask-for-ugui": "https://github.com/mob-sakai/SoftMaskForUGUI.git#2.0.0",
     "com.unity.adaptiveperformance.samsung.android": "5.0.0",
     "com.unity.ai.navigation": "2.0.4",
+    "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.feature.mobile": "1.0.0",
     "com.unity.ide.rider": "3.0.34",
